--- a/index.html
+++ b/index.html
@@ -690,18 +690,12 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
 document.getElementById('restartBtn').addEventListener('click', () => {
   fadeIn(() => {
     document.getElementById('game-over-screen').style.display = 'none';
-    score = 0;
-    gameStarted = false;
-    gameOver = false;
-    gamePaused = false;
-    direction = 1;
-    angle = 0;
-    speed = 3;
-    maxSpeed = 6;
-    document.querySelector('canvas').style.visibility = 'hidden';
-    fadeOut(() => {
-      document.getElementById('startBtn').click();
-    });
+    document.querySelector('canvas')?.remove();
+    game.destroy(true); // clean up old Phaser instance
+    setTimeout(() => {
+      const newGame = new Phaser.Game(config);
+      fadeOut();
+    }, 50); // let DOM settle
   });
 });
 
