--- a/index.html
+++ b/index.html
@@ -494,6 +494,9 @@ function preload() {
 
     // Main game setup: initialize UI, player orbs, physics, input, and scheduling
 function create() {
+      if (obstacles) obstacles.clear(true, true);
+      if (points) points.clear(true, true);
+
       const cam=this.cameras.main;
       const cx=cam.centerX, cy=cam.centerY;
       LANES[0]=cy-radius; LANES[1]=cy; LANES[2]=cy+radius;
@@ -690,9 +693,9 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
 document.getElementById('restartBtn').addEventListener('click', () => {
   fadeIn(() => {
     document.getElementById('game-over-screen').style.display = 'none';
-    
-    // Reset key game state variables
-    gameStarted = true;
+
+    // Reset all game state variables
+    gameStarted = false;
     gameOver = false;
     gamePaused = false;
     direction = 1;
@@ -700,15 +703,20 @@ document.getElementById('restartBtn').addEventListener('click', () => {
     speed = 3;
     score = 0;
 
-    // Hide canvas temporarily while restarting
-    document.querySelector('canvas').style.visibility = 'visible';
+    // Restart the Phaser scene
+    game.scene.getScene('default').scene.restart();
 
-    // Restart the scene
-    game.scene.keys.default.scene.restart();
-
-    fadeOut();
+    setTimeout(() => {
+      // Manually trigger start flow after scene is ready
+      gameStarted = true;
+      document.querySelector('canvas').style.visibility = 'visible';
+      scoreText?.setVisible(true);
+      pauseIcon?.setVisible(true);
+      fadeOut();
+    }, 100);
   });
 });
+
 
 
 
