--- a/index.html
+++ b/index.html
@@ -751,59 +751,38 @@ document.getElementById('homeBtn').addEventListener('click', () => {
     }
 
     function triggerGameOver(){
-      if(gameOver) return;
-      gameOver=true;
-      [circle1,circle2].forEach(c=>{
-        const px=c.x, py=c.y; c.destroy();
-        this.add.particles('orb').createEmitter({
-          x:px,y:py,
-          speed:{min:150,max:350},
-          angle:{min:0,max:360},
-          scale:{start:0.8,end:0},
-          lifespan:500,blendMode:'ADD',quantity:8
-        });
-      });
-      sfx.explode.play();
-      this.time.delayedCall(700,()=>{
-        this.physics.pause();
-        document.querySelector('canvas').style.visibility='hidden';
-        document.getElementById('finalScore').innerText=score;
-        if(score > highScore){
-          highScore = score;
-          sfx.newBest.play();
-        }
-        document.getElementById('bestScore').innerText = highScore;
-        if(useLocalHighScore) {
-          localStorage.setItem('tricky_high_score', highScore);
-        }
+  if (gameOver) return;
+  gameOver = true;
+  // … your particle and sound code …
 
-        // POST score only if not guest
-        if (!useLocalHighScore) {
-          fetch('/api/leaderboard', {
-            method:'POST',
-            headers:{ 'Content-Type':'application/json' },
-            body: JSON.stringify({ username: piUsername, score: highScore })
-          }).catch(console.error);
-        }
-
-//         // GET top-100 for game-over screen
-//         fetch('/api/leaderboard?top=100')
-//           .then(r=>r.json()).then(data=>{
-//             const list=document.getElementById('leaderboardEntries');
-//             list.innerHTML = '';
-// data.forEach((e, i) => {
-//   const li = document.createElement('li');
-//   li.setAttribute('data-rank', `#${i + 1}`);
-//   li.innerHTML = `<strong>${e.username}</strong><span>${e.score}</span>`;
-//   list.appendChild(li);
-// });
-
-//             document.getElementById('leaderboard').style.display = 'block';
-//           }).catch(console.error);
-
-        document.getElementById('game-over-screen').style.display='flex';
-      });
+  this.time.delayedCall(700, () => {
+    this.physics.pause();
+    document.querySelector('canvas').style.visibility = 'hidden';
+    document.getElementById('finalScore').innerText = score;
+    if (score > highScore) {
+      highScore = score;
+      sfx.newBest.play();
     }
+    document.getElementById('bestScore').innerText = highScore;
+
+    if (useLocalHighScore) {
+      localStorage.setItem('tricky_high_score', highScore);
+    }
+
+    // POST score only if not guest
+    if (!useLocalHighScore) {
+      fetch('/api/leaderboard', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ username: piUsername, score: highScore })
+      }).catch(console.error);
+    }  // <-- closing brace added here
+
+    // always show the game-over screen
+    document.getElementById('game-over-screen').style.display = 'flex';
+  });
+}
+
 
     function collectPoint(_,pt){
       pt.destroy();
