--- a/index.html
+++ b/index.html
@@ -691,33 +691,31 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
 
 
 
-document.getElementById('restartBtn').addEventListener('click', () => {
-  fadeIn(() => {
-    document.getElementById('game-over-screen').style.display = 'none';
-    
-    // Destroy the old game completely
-    game.destroy(true);
-
-    // Reset all global game state variables
-    gameStarted = false;
-    gameOver = false;
-    gamePaused = false;
-    direction = 1;
-    angle = 0;
-    speed = 3;
-    score = 0;
-
-    // Clear old DOM canvas if any
-    const oldCanvas = document.querySelector('canvas');
-    if (oldCanvas) oldCanvas.remove();
-
-    // Recreate new Phaser instance from scratch
-    setTimeout(() => {
-      window.game = new Phaser.Game(config); // Must assign to global so rest of code can access
-      fadeOut();
-    }, 50); // Let DOM settle
-  });
-});
+      // RESTART (fixed)
+      document.getElementById('restartBtn').addEventListener('click', ()=>{
+        sfx.uiClick.play(); fadeIn(() => {
+          document.getElementById('game-over-screen').style.display='none';
+          document.getElementById('user-info').style.display='none';
+          document.getElementById('viewLeaderboardBtn').style.display='none';
+          document.getElementById('start-screen').style.display='none';
+          // Destroy old game
+          game.destroy(true);
+          // Reset globals
+          gameStarted=false; gameOver=false; gamePaused=false; direction=1; angle=0; speed=3; score=0;
+          // Remove old canvas
+          const oldCanvas = document.querySelector('canvas'); if(oldCanvas) oldCanvas.remove();
+          // Recreate Phaser instance
+          setTimeout(()=>{
+            window.game = new Phaser.Game(config);
+            // After fade out, start gameplay
+            fadeOut(() => {
+              gameStarted=true; document.querySelector('canvas').style.visibility='visible';
+              scoreText.setVisible(true); pauseIcon.setVisible(true); muteIcon.setVisible(true);
+              scheduleSpawn.call(this);
+            });
+          },50);
+        });
+      });
 
 
 
