--- a/index.html
+++ b/index.html
@@ -137,13 +137,12 @@
     }
     @media (max-width:600px) { #game-over-screen h1 { font-size:4rem; } }
 
-    /* ----- Leaderboard Styling (FIXED) ----- */
     #leaderboard, #leaderboardEntriesHome, #leaderboard-screen ol {
       width: 100%;
       max-width: 400px;
       box-sizing: border-box;
       margin: 0 auto;
-      padding-left: 2.5rem; /* Make room for rank badge */
+      padding-left: 2.5rem;
       background:rgba(0,0,0,0.6);
       padding-top:1rem; padding-bottom:1rem; border-radius:0.5rem;
       max-height:300px; overflow-y:auto;
@@ -273,7 +272,6 @@
         document.getElementById('username').innerText = piUsername;
         document.getElementById('loginBtn').style.display = 'none';
         useLocalHighScore = false;
-        // fetch user's high score via username endpoint
         const res = await fetch(`/api/leaderboard/${piUsername}`);
         if (res.ok) {
           const entry = await res.json();
@@ -282,15 +280,11 @@
           highScore = 0;
         }
         localStorage.setItem('tricky_high_score', highScore);
-      } catch (e) {
-        // Not signed in
-      }
+      } catch (e) {}
     }
-    // Try silent auth on load
     initAuth();
     document.getElementById('loginBtn').addEventListener('click', initAuth);
 
-    // Fade helpers
     function fadeIn(callback, duration = 600) {
       const fade = document.getElementById('fade-screen');
       fade.classList.add('fade-in');
@@ -302,7 +296,6 @@
       setTimeout(() => { callback?.(); }, duration);
     }
 
-    // --------- Leaderboard logic ----------
     async function showHomeLeaderboard() {
       const list = document.getElementById('leaderboardEntriesHome');
       list.innerHTML = '';
@@ -328,6 +321,9 @@
     let scoreText, pauseIcon, pauseOverlay, countdownText;
     let sfx = {}, isMuted = false;
 
+    //--- Critical: Store reference to game and scene for robust restart ---
+    let gameInstance = null;
+
     const config = {
       type: Phaser.AUTO,
       transparent: true,
@@ -335,7 +331,7 @@
       physics: { default: 'arcade', arcade: { debug: false } },
       scene: { key: 'default', preload, create, update }
     };
-    window.game = new Phaser.Game(config);
+    gameInstance = new Phaser.Game(config);
 
     function preload() {
       this.load.audio('explode','assets/explode.wav');
@@ -347,7 +343,7 @@
     }
 
     function create() {
-      // ----- Reset ALL global state on every create -----
+      // Reset ALL global state on every create
       gameStarted = true;
       gameOver = false;
       gamePaused = false;
@@ -363,7 +359,6 @@
       const cx = cam.centerX, cy = cam.centerY;
       LANES[0] = cy - radius; LANES[1] = cy; LANES[2] = cy + radius;
 
-      // Graphics & textures
       this.make.graphics({add:false})
         .fillStyle(0xffffff,0.04).fillCircle(50,50,30)
         .fillStyle(0xffffff,1).fillCircle(50,50,20)
@@ -380,13 +375,11 @@
         .closePath().fillPath()
         .generateTexture('point',50,50).destroy();
 
-      // Orbs
       circle1 = this.add.image(0,0,'orb'); this.physics.add.existing(circle1);
       circle1.body.setCircle(22.5,27.5,27.5);
       circle2 = this.add.image(0,0,'orb'); this.physics.add.existing(circle2);
       circle2.body.setCircle(22.5,27.5,27.5);
 
-      // Trail effect
       const trail = this.add.particles('orb');
       [circle1,circle2].forEach(c => trail.createEmitter({
         follow:c, lifespan:300, speed:0,
@@ -397,18 +390,15 @@
       obstacles = this.physics.add.group();
       points = this.physics.add.group();
 
-      // HUD
       scoreText = this.add.text(16,16,'Score: 0',{
         fontFamily:'Poppins', fontSize:'36px',
         color:'#fff', stroke:'#000', strokeThickness:4
-      }).setDepth(2).setVisible(false);
+      }).setDepth(2).setVisible(true); // always visible after restart
 
-      // Load highScore for guest users
       if (useLocalHighScore) {
         highScore = Number(localStorage.getItem('tricky_high_score')) || 0;
       }
 
-      // UI icons
       const gfx = this.make.graphics({add:false});
       gfx.fillStyle(0x000000,0.3).fillRoundedRect(0,0,56,56,12)
          .fillStyle(0xffffff,1).fillRoundedRect(14,12,8,32,4).fillRoundedRect(34,12,8,32,4);
@@ -428,9 +418,9 @@
       gfx.generateTexture('muteOff',56,56);
 
       pauseIcon = this.add.image(cam.width-40,40,'pauseIcon')
-                    .setInteractive().setDepth(3).setVisible(false);
+                    .setInteractive().setDepth(3).setVisible(true); // always visible
       const muteIcon = this.add.image(cam.width-100,40,'muteOn')
-                       .setInteractive().setDepth(3).setVisible(false);
+                       .setInteractive().setDepth(3).setVisible(true); // always visible
       pauseOverlay = document.getElementById('pause-overlay');
 
       countdownText = this.add.text(cx,cy,'',{
@@ -438,7 +428,6 @@
         color:'#fff', stroke:'#000', strokeThickness:6
       }).setOrigin(0.5).setDepth(5).setVisible(false);
 
-      // SFX
       sfx.explode     = this.sound.add('explode');
       sfx.move        = this.sound.add('move');
       sfx.point       = this.sound.add('point');
@@ -446,7 +435,6 @@
       sfx.uiClick     = this.sound.add('uiClick');
       sfx.pauseWhoosh = this.sound.add('pauseWhoosh');
 
-      // Mute toggle
       muteIcon.on('pointerdown',()=>{
         isMuted=!isMuted;
         this.sound.mute=isMuted;
@@ -454,7 +442,6 @@
         if(!isMuted) sfx.uiClick.play();
       });
 
-      // Pause/play
       pauseIcon.on('pointerdown',(_,x,y,e)=>{
         e.stopPropagation();
         if(!gameStarted||gameOver) return;
@@ -485,7 +472,6 @@
         }
       });
 
-      // Change direction on tap
       this.input.on('pointerdown',()=>{
         if(gameStarted&&!gameOver&&!gamePaused){
           direction*=-1;
@@ -498,13 +484,11 @@
         }
       });
 
-      // Collision
       this.physics.add.overlap(circle1,obstacles,triggerGameOver,null,this);
       this.physics.add.overlap(circle2,obstacles,triggerGameOver,null,this);
       this.physics.add.overlap(circle1,points,collectPoint,null,this);
       this.physics.add.overlap(circle2,points,collectPoint,null,this);
 
-      // Speed increase
       this.time.addEvent({
         delay:1000, loop:true,
         callback: ()=>{
@@ -515,7 +499,6 @@
         }
       });
 
-      // Spawner
       const scene=this;
       function getSpawnInterval(){
         const t=Phaser.Math.Clamp((speed-3)/(maxSpeed-3),0,1);
@@ -528,36 +511,16 @@
         },[],scene);
       }
 
-      // START game
-      document.getElementById('startBtn').addEventListener('click', ()=>{
-        sfx.uiClick.play();
-        fadeIn(() => {
-          document.getElementById('user-info').style.display='none';
-          document.getElementById('viewLeaderboardBtn').style.display='none';
-          document.getElementById('start-screen').style.display='none';
-          gameStarted=true;
-          document.querySelector('canvas').style.visibility='visible';
-          scoreText.setVisible(true);
-          pauseIcon.setVisible(true);
-          muteIcon.setVisible(true);
-          scheduleSpawn();
-          fadeOut();
-        });
-      });
-
-      // RESTART (robust)
-      document.getElementById('restartBtn').addEventListener('click', () => {
-        sfx.uiClick.play();
-        fadeIn(() => {
-          document.getElementById('game-over-screen').style.display = 'none';
-          game.scene.keys.default.scene.restart();
-          fadeOut();
-        });
-      });
-
-      document.getElementById('homeBtn').addEventListener('click', () => {
-        fadeIn(() => window.location.href = window.location.href);
-      });
+      // Always start gameplay and show canvas & HUD after restart
+      document.querySelector('canvas').style.visibility='visible';
+      scoreText.setVisible(true);
+      pauseIcon.setVisible(true);
+      muteIcon.setVisible(true);
+      pauseOverlay.style.display = 'none';
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.getElementById('leaderboard-screen').style.display = 'none';
+      // Only start spawning (no fade in needed on restart)
+      scheduleSpawn();
     }
 
     function update(){
@@ -614,8 +577,6 @@
         if(useLocalHighScore) {
           localStorage.setItem('tricky_high_score', highScore);
         }
-
-        // POST score if not guest
         if (!useLocalHighScore) {
           fetch('/api/leaderboard', {
             method:'POST',
@@ -623,7 +584,6 @@
             body: JSON.stringify({ username: piUsername, score: highScore })
           }).catch(console.error);
         }
-
         document.getElementById('game-over-screen').style.display='flex';
       });
     }
@@ -639,6 +599,33 @@
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
+
+    //--- EVENT HANDLERS (only attach ONCE, not in create) ---
+    document.getElementById('startBtn').addEventListener('click', ()=>{
+      sfx.uiClick?.play();
+      fadeIn(() => {
+        document.getElementById('user-info').style.display='none';
+        document.getElementById('viewLeaderboardBtn').style.display='none';
+        document.getElementById('start-screen').style.display='none';
+        document.querySelector('canvas').style.visibility='visible';
+        fadeOut();
+      });
+    });
+
+    document.getElementById('restartBtn').addEventListener('click', () => {
+      sfx.uiClick?.play();
+      fadeIn(() => {
+        document.getElementById('game-over-screen').style.display = 'none';
+        // Phaser restart
+        gameInstance.scene.keys.default.scene.restart();
+        fadeOut();
+      });
+    });
+
+    document.getElementById('homeBtn').addEventListener('click', () => {
+      fadeIn(() => window.location.href = window.location.href);
+    });
+
   </script>
 </body>
 </html>
